# meipi-indexing

./: .gitignore  .readthedocs.yaml  LICENSE  README.MD  pyproject.toml
.github/workflows/: pylint.yml
doc/singlehtml/: .buildinfo  index.html  objects.inv
doc/singlehtml/_static/: documentation_options.js
doc/source/: conf.py  full.rst  index.rst
doc/source/autodoc/: indexing.db.rst  indexing.rst  modules.rst
example/: dino.ipynb  filemeta.ipynb
src/meipi/indexing/: __init__.py  __main__.py  config.py  embedding.py  pg_docker.env  preprocess.py  utils.py
src/meipi/indexing/db/: __init__.py  model.py  pillow.py  postgres.py
